<resources>
    <string name="app_name">TED</string>

    <string name="title_talks">Talks</string>
    <string name="title_playlists">Playlists</string>
    <string name="title_podcasts">Podcasts</string>
    <string name="title_suprise_me">Surprise Me</string>
    <string name="title_my_talks">My talks</string>

    <string name="frag_title_newest">Newest</string>
    <string name="frag_title_trending">Trending</string>
    <string name="frag_title_most_viewed">Most viewed</string>
    <string name="frag_title_hidden_gems">Hidden gems</string>

    <string name="action_settings">Settings</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_log_in">Log in</string>

    <string name="msg_generic_no_data">No Data to Display</string>
    <string name="lbl_refresh">Refresh</string>
</resources>
