<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:background="@color/white_full">

        <TextView
            android:id="@+id/tv_frag_newest_talks"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/frag_title_newest"/>

        <TextView
            android:id="@+id/tv_frag_trending_talks"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/frag_title_trending"/>

        <TextView
            android:id="@+id/tv_frag_most_viewed_talks"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/frag_title_most_viewed"/>

        <TextView
            android:id="@+id/tv_frag_hidden_gems"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/frag_title_hidden_gems"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_light"
        android:layout_marginStart="@dimen/divider_side_margin"
        android:layout_marginEnd="@dimen/divider_side_margin"/>

    <FrameLayout
        android:id="@+id/fl_frag_talk_child"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>